--- a/hugo.toml
+++ b/hugo.toml
@@ -13,19 +13,18 @@ displayToggle = false
 
 [params.navbar]
 displayTitle = true
-displayLogo = false
+displayLogo = true
 
 [params.navbar.logo]
-path = "images/logo.svg"
-dark = "images/logo-dark.svg"
+path = "images/favicon/artbox-logo.svg"
 link = "/artbox/"
 width = 40
-height = 20
+height = 40
 
 [page]
 width = "normal"
 
-[footer]
+[params.footer]
 enable = false
 displayCopyright = false
 displayPoweredBy = false
